tests/bad/var_wrong_type.ae
/// fail: Variable x has type i32 but initializer has type bool

def main() {
    let x: i32 = true
}